add hiddden image

--- a/index.html
+++ b/index.html
@@ -176,12 +176,11 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card card-1">
-            <div class="card-img" style="background-image: url('./assets/images/1.png');">
-              <!-- <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/1.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div> -->
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%b3%d9%85%d9%88-%d8%a7%d9%84%d9%81%d8%a7%d9%83%d9%87%d8%a9-%d9%84%d9%84%d8%ae%d8%b6%d8%b1%d9%88%d8%a7%d8%aa-%d9%88%d8%a7%d9%84%d9%81%d9%88%d8%a7%d9%83%d9%87%d8%a9/"
+                class="hidden-img"><img src="./assets/images/سمو-الفاكهة.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%b3%d9%85%d9%88-%d8%a7%d9%84%d9%81%d8%a7%d9%83%d9%87%d8%a9-%d9%84%d9%84%d8%ae%d8%b6%d8%b1%d9%88%d8%a7%d8%aa-%d9%88%d8%a7%d9%84%d9%81%d9%88%d8%a7%d9%83%d9%87%d8%a9/"
+                class="default-img"><img src="./assets/images/1.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%b3%d9%85%d9%88-%d8%a7%d9%84%d9%81%d8%a7%d9%83%d9%87%d8%a9-%d9%84%d9%84%d8%ae%d8%b6%d8%b1%d9%88%d8%a7%d8%aa-%d9%88%d8%a7%d9%84%d9%81%d9%88%d8%a7%d9%83%d9%87%d8%a9/">سمو
@@ -193,12 +192,11 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card card-2">
-            <div class="card-img" style="background-image: url('./assets/images/2.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/2.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d8%af%d9%8a%d8%b1%d8%aa%d9%8a/"
+                class="hidden-img"><img src="./assets/images/ديرتي.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d8%af%d9%8a%d8%b1%d8%aa%d9%8a/"
+                class="default-img"><img src="./assets/images/2.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d8%af%d9%8a%d8%b1%d8%aa%d9%8a/">تطبيق
@@ -210,12 +208,11 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card card-3">
-            <div class="card-img" style="background-image: url('./assets/images/3.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/3.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b3%d9%88%d9%85-%d9%84%d8%a8%d9%8a%d8%b9-%d9%88%d8%b4%d8%b1%d8%a7%d8%a1-%d8%a7%d9%84%d8%b9%d9%82%d9%80%d9%80%d8%a7%d8%b1%d8%a7%d8%aa/"
+                class="hidden-img"><img src="./assets/images/سوم.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b3%d9%88%d9%85-%d9%84%d8%a8%d9%8a%d8%b9-%d9%88%d8%b4%d8%b1%d8%a7%d8%a1-%d8%a7%d9%84%d8%b9%d9%82%d9%80%d9%80%d8%a7%d8%b1%d8%a7%d8%aa/"
+                class="default-img"><img src="./assets/images/3.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b3%d9%88%d9%85-%d9%84%d8%a8%d9%8a%d8%b9-%d9%88%d8%b4%d8%b1%d8%a7%d8%a1-%d8%a7%d9%84%d8%b9%d9%82%d9%80%d9%80%d8%a7%d8%b1%d8%a7%d8%aa/">تطبيق
@@ -226,13 +223,12 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-4">
-            <div class="card-img" style="background-image: url('./assets/images/4.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/4.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+          <div class="card card-3">
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a3%d8%b4%d8%b1%d8%a8-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b7%d9%84%d8%a8-%d9%85%d9%8a%d8%a7%d9%87-%d8%aa%d8%b5%d9%85%d9%8a%d9%85-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82/"
+                class="hidden-img"><img src="./assets/images/اشرب.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a3%d8%b4%d8%b1%d8%a8-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b7%d9%84%d8%a8-%d9%85%d9%8a%d8%a7%d9%87-%d8%aa%d8%b5%d9%85%d9%8a%d9%85-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82/"
+                class="default-img"><img src="./assets/images/4.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a3%d8%b4%d8%b1%d8%a8-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b7%d9%84%d8%a8-%d9%85%d9%8a%d8%a7%d9%87-%d8%aa%d8%b5%d9%85%d9%8a%d9%85-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82/">تطبيق
@@ -243,76 +239,74 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-5">
-            <div class="card-img" style="background-image: url('./assets/images/5.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/5.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+          <div class="card card-3">
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a7%d9%84%d8%ad%d8%a7%d9%81%d8%b8/"
+                class="hidden-img"><img src="./assets/images/الحافظ.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a7%d9%84%d8%ad%d8%a7%d9%81%d8%b8/"
+                class="default-img"><img src="./assets/images/5.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a7%d9%84%d8%ad%d8%a7%d9%81%d8%b8/">تطبيق
-                  الحافظ
-                </a>
+                  الحافظ</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-6">
-            <div class="card-img" style="background-image: url('./assets/images/6.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/6.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+          <div class="card card-3">
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d9%84%d9%8a%d9%85%d9%88%d9%86%d8%a9/"
+                class="hidden-img"><img src="./assets/images/ليمونة.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d9%84%d9%8a%d9%85%d9%88%d9%86%d8%a9/"
+                class="default-img"><img src="./assets/images/6.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d9%84%d9%8a%d9%85%d9%88%d9%86%d8%a9/">تطبيق
-                  مطاعم ليمونه</a>
+                  ليمونة</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-7">
-            <div class="card-img" style="background-image: url('./assets/images/7.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/7.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+          <div class="card card-3">
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%ad%d8%a7%d9%85%d8%b5-%d8%a7%d9%84%d8%b9%d9%84%d9%8a/"
+                class="hidden-img"><img src="./assets/images/العلي.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%ad%d8%a7%d9%85%d8%b5-%d8%a7%d9%84%d8%b9%d9%84%d9%8a/"
+                class="default-img"><img src="./assets/images/7.png" alt=""></a>
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%ad%d8%a7%d9%85%d8%b5-%d8%a7%d9%84%d8%b9%d9%84%d9%8a/">تطبيق
-                  محامص العلي</a>
+                  محامص العلى</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card card-8">
-            <div class="card-img" style="background-image: url('./assets/images/8.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/8.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
+          <div class="card card-3">
+            <div class="default-img-parent">
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/"
+                class="hidden-img"><img src="./assets/images/مزايا2.png" alt=""></a>
+              <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/"
+                class="default-img"><img src="./assets/images/8.png" alt=""></a>
               <div class="card-info">
-                <a href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/" target="_blank" href="">تطبيق مزايا</a>
+                <a target="_blank"
+                  href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/">تطبيق
+                  مزايا</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="btn-more">
-            <a href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/" class="btn">مزيد من الأعمال</a>
-          </div>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="btn-more">
+          <a href="https://mobi.art4muslim.com/portfolio/" target="_blank"
+            class="btn">مزيد من الأعمال</a>
         </div>
       </div>
     </div>
@@ -327,7 +321,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-1">
+          <a href="https://mobi.art4muslim.com/services/%d8%a7%d9%86%d8%b4%d8%a7%d8%a1-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%aa%d9%88%d8%b5%d9%8a%d9%84-%d8%b7%d9%84%d8%a8%d8%a7%d8%aa/" target="_blank"  class="card card-1">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -335,11 +329,11 @@
             <div class="card-img">
               <img src="./assets/images/food-serving.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق توصيل طلبات</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق توصيل طلبات</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-2">
+          <a href="https://mobi.art4muslim.com/services/%D8%AA%D8%B5%D9%85%D9%8A%D9%85-%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-%D8%AD%D8%AC%D8%B2-%D9%85%D9%88%D8%A7%D8%B9%D9%8A%D8%AF/" target="_blank" class="card card-2">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -347,12 +341,12 @@
             <div class="card-img">
               <img src="./assets/images/medical-assistance.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              حجز مواعيد</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              حجز مواعيد</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-3">
+          <a href="https://mobi.art4muslim.com/services/%D8%AA%D8%B5%D9%85%D9%8A%D9%85-%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-%D9%85%D8%AB%D9%84-%D8%AD%D8%B1%D8%A7%D8%AC/" target="_blank" class="card card-3">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -360,12 +354,12 @@
             <div class="card-img">
               <img src="./assets/images/appliances.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيقات
-              حراج</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيقات
+              حراج</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-4">
+          <a href="https://mobi.art4muslim.com/services/%d8%a7%d9%86%d8%b4%d8%a7%d8%a1-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a7%d9%8a%d9%81%d9%88%d9%86/" target="_blank"  class="card card-4">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -373,12 +367,12 @@
             <div class="card-img">
               <img src="./assets/images/app-store.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              للايفون</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              للايفون</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-5">
+          <a href="https://mobi.art4muslim.com/services/%D8%AA%D8%B5%D9%85%D9%8A%D9%85-%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-%D9%85%D8%AA%D8%AC%D8%B1/" target="_blank"  class="card card-5">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -386,12 +380,12 @@
             <div class="card-img">
               <img src="./assets/images/online-shop.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              متجر</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              متجر</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-6">
+          <a href="https://mobi.art4muslim.com/services/%d8%aa%d8%b5%d9%85%d9%8a%d9%85-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%ab%d9%84-%d9%85%d8%b1%d8%b3%d9%88%d9%84/" target="_blank" class="card card-6">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -399,12 +393,12 @@
             <div class="card-img">
               <img src="./assets/images/track (1).png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              مثل مرسول</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              مثل مرسول</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-7">
+          <a href="https://mobi.art4muslim.com/services/%D8%AA%D8%B5%D9%85%D9%8A%D9%85-%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-%D9%85%D8%AB%D9%84-%D8%B7%D9%84%D8%A8%D8%A7%D8%AA/" target="_blank" class="card card-7">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -412,12 +406,12 @@
             <div class="card-img">
               <img src="./assets/images/mobile-app.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              توصيل</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              مثل طلبات</h6>
+          </a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card card-8">
+          <a href="https://mobi.art4muslim.com/services/%D8%AA%D8%B5%D9%85%D9%8A%D9%85-%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-%D9%85%D8%AB%D9%84-%D8%A7%D9%88%D8%A8%D8%B1/" target="_blank" class="card card-8">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
             <img class="circle-3" src="./assets/images/circle.png" alt="">
@@ -425,9 +419,9 @@
             <div class="card-img">
               <img src="./assets/images/059---Mobile-Parking-Ticket.png" alt="">
             </div>
-            <a class="card-title">تصميم تطبيق
-              مثل اوبر</a>
-          </div>
+            <h6 class="card-title">تصميم تطبيق
+              مثل اوبر</h6>
+          </a>
         </div>
       </div>
     </div>
